--- a/net/wireshark/Makefile
+++ b/net/wireshark/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.159 2016/12/04 05:17:39 ryoon Exp $
+# $NetBSD: Makefile,v 1.160 2016/12/19 09:27:26 wiz Exp $
 
-DISTNAME=	wireshark-2.2.2
-PKGREVISION=	1
+DISTNAME=	wireshark-2.2.3
 CATEGORIES=	net
 MASTER_SITES=	https://www.wireshark.org/download/src/
 EXTRACT_SUFX=	.tar.bz2
