--- a/www/lynx/Makefile
+++ b/www/lynx/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.122 2016/07/22 18:51:41 shattered Exp $
+# $NetBSD: Makefile,v 1.123 2016/12/21 11:25:25 sevan Exp $
 
 DISTNAME=	lynx2.8.8rel.2
 PKGNAME=	${DISTNAME:S/lynx/lynx-/:S/rel//}
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	www
 MASTER_SITES=	http://lynx.isc.org/${SUBDIR:Q}/ \
 		ftp://ftp.cyf-kr.edu.pl/pub/unix/lynx/${SUBDIR:Q}/
