--- a/mail/exim/Makefile
+++ b/mail/exim/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.150 2016/12/04 05:17:32 ryoon Exp $
+# $NetBSD: Makefile,v 1.151 2016/12/25 11:29:54 wiedi Exp $
 
-DISTNAME=	exim-4.87
-PKGREVISION=	5
+DISTNAME=	exim-4.88
 CATEGORIES=	mail net
 MASTER_SITES=	ftp://ftp.exim.org/pub/exim/exim4/ \
 		http://dl.ambiweb.de/mirrors/ftp.exim.org/exim/exim4/
