--- a/devel/global/Makefile
+++ b/devel/global/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.62 2016/12/04 05:17:23 ryoon Exp $
+# $NetBSD: Makefile,v 1.63 2016/12/30 00:39:30 wiz Exp $
 
-DISTNAME=	global-6.5.5
-PKGREVISION=	1
+DISTNAME=	global-6.5.6
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=global/}
 
