--- a/textproc/py-html5lib/Makefile
+++ b/textproc/py-html5lib/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.8 2014/05/10 15:46:52 joerg Exp $
+# $NetBSD: Makefile,v 1.9 2016/12/30 10:09:36 ryoon Exp $
 
-DISTNAME=	0.999
-PKGNAME=	${PYPKGPREFIX}-html5lib-${DISTNAME}
-PKGREVISION=	1
+H5LVER=		0.9999999
+DISTNAME=	html5lib-python-${H5LVER}
+PKGNAME=	${PYPKGPREFIX}-html5lib-${H5LVER}
 CATEGORIES=	textproc www python
-MASTER_SITES=	https://github.com/html5lib/html5lib-python/archive/
+MASTER_SITES=	-https://github.com/html5lib/html5lib-python/archive/${H5LVER}${EXTRACT_SUFX}
 
 MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	https://github.com/html5lib/html5lib-python
@@ -13,9 +13,7 @@ LICENSE=	mit
 
 DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
 
-DIST_SUBDIR=	py-html5lib
-WRKSRC=		${WRKDIR}/html5lib-python-${DISTNAME}
-EGG_NAME=	html5lib-${DISTNAME}
+EGG_NAME=	html5lib-${PKGVERSION_NOREV}
 
 .include "../../lang/python/distutils.mk"
 .include "../../mk/bsd.pkg.mk"
